# AndroidUsbAudio

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/moriafly/usbaudio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/moriafly/usbaudio/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/moriafly/usbaudio/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
usbaudio/: build.gradle
usbaudio/src/androidTest/java/com/moriafly/usbaudio/: ExampleInstrumentedTest.kt
usbaudio/src/main/: AndroidManifest.xml
usbaudio/src/main/cpp/: CMakeLists.txt  LibusbJava.cpp  ch_ntb_inf_libusb_Libusb.h  libusb-transfer.h  usbaudio_dump.c
usbaudio/src/main/cpp/libusb/include/: libusb.h
usbaudio/src/main/java/au/id/jms/usbaudio/: UsbAudio.java
usbaudio/src/main/java/au/id/jms/usbaudiodemo/: MainActivity.java
usbaudio/src/main/java/ch/ntb/inf/libusb/: CMakeLists.txt  ConfigurationDescriptor.java  Context.java  Descriptor.java  DescriptorType.java  Device.java  DeviceDescriptor.java  EndpointDescriptor.java  Interface.java  InterfaceDescriptor.java  Libusb.java  LibusbJava.java  RequestType.java  Speed.java  StandardRequest.java  TransferType.java
usbaudio/src/main/java/ch/ntb/inf/libusb/exceptions/: AccessDeniedException.java  CMakeLists.txt  DeviceListNotValidException.java  EntityNotFoundException.java  InvalidParameterException.java  JavaIllegalDeviceHandleException.java  JavaReferencesNotLoadedException.java  JavaWrongEnvironmentException.java  LibusbException.java  LibusbIOException.java  NoDeviceException.java  NoMemoryException.java  NotSupportedException.java  OtherException.java  OverflowException.java  PipeException.java  ResourceBusyException.java  SysCallInterruptedException.java  TimeoutException.java  WrongContextException.java
usbaudio/src/main/java/ch/ntb/inf/libusb/test/: AT90USB1287Test.java  ByteBufferTest.java  CMakeLists.txt  LibusbJavaListTest.java  LibusbJavaTest.java  LibusbJavaTester.java  UseTestLibusbJava.java
usbaudio/src/main/java/org/libusb/: UsbHelper.java
