add_subdirectory(exceptions)
add_subdirectory(test)

add_libusbjava_sources(ConfigurationDescriptor.java)
add_libusbjava_sources(Context.java)
add_libusbjava_sources(Descriptor.java)
add_libusbjava_sources(DescriptorType.java)
add_libusbjava_sources(Device.java)
add_libusbjava_sources(DeviceDescriptor.java)
add_libusbjava_sources(EndpointDescriptor.java)
add_libusbjava_sources(Interface.java)
add_libusbjava_sources(InterfaceDescriptor.java)
add_libusbjava_sources(Libusb.java)
add_libusbjava_sources(LibusbJava.java)
add_libusbjava_sources(Speed.java)
add_libusbjava_sources(StandardRequest.java)
add_libusbjava_sources(TransferType.java)
