add_libusbjava_sources(UseTestLibusbJava.java)
add_libusbjava_sources(LibusbJavaTest.java)
add_libusbjava_sources(LibusbJavaListTest.java)
add_libusbjava_sources(ByteBufferTest.java)
add_libusbjava_sources(AT90USB1287Test.java)
add_libusbjava_sources(LibusbJavaTester.java)
#add_executable(libusbJavaTest LibusbJavaTest.java)
#target_link_libraries(libusbJavaTest LibusbJavaWrapper)
#add_executable(useTestWrapper UseTestLibusbJava.java)
#target_link_libraries(useTestWrapper LibusbJavaWrapper)
